--- a/default/email/2fa-code.html
+++ b/default/email/2fa-code.html
@@ -5,6 +5,8 @@
 		<title>2FA - Code</title>
 		<style type="text/css">
 			html, body {
+			    width: 100%;
+				max-width: 500px;
 				height: 100%;
 			}
 			
@@ -50,10 +52,6 @@
 				font-weight: 400;
 				text-align: center;
 				vertical-align: middle;
-				-webkit-user-select: none;
-				-moz-user-select: none;
-				-ms-user-select: none;
-				user-select: none;
 				border: 1px solid #007bff;
 				transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 				color: #fff;
