--- a/default/js/codemirror/src/index.html
+++ b/default/js/codemirror/src/index.html
@@ -8,72 +8,197 @@
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" rel="stylesheet">
 </head>
 <body>
-<div data-language="properties" id="code-editor"></div>
-<script id="editor-content" type="text/plain">ServerName localhost
-DocumentRoot /etc/fruithost/placeholder
-DirectoryIndex index.php index.html
-AddDefaultCharset UTF-8
+<div data-language="config" id="code-editor"></div>
+<script id="editor-content" type="text/plain">#
+# /etc/proftpd/proftpd.conf -- This is a basic ProFTPD configuration file.
+# To really apply changes, reload proftpd after modifications, if
+# it runs in daemon mode. It is not required in inetd/xinetd mode.
+#
 
-ErrorDocument 100 /errors/100.html
-ErrorDocument 101 /errors/101.html
-ErrorDocument 400 /errors/400.html
-ErrorDocument 401 /errors/401.html
-ErrorDocument 403 /errors/403.html
-ErrorDocument 404 /errors/404.html
-ErrorDocument 405 /errors/405.html
-ErrorDocument 408 /errors/408.html
-ErrorDocument 410 /errors/410.html
-ErrorDocument 411 /errors/411.html
-ErrorDocument 412 /errors/412.html
-ErrorDocument 413 /errors/413.html
-ErrorDocument 414 /errors/414.html
-ErrorDocument 415 /errors/415.html
-ErrorDocument 500 /errors/500.html
-ErrorDocument 501 /errors/501.html
-ErrorDocument 502 /errors/502.html
-ErrorDocument 503 /errors/503.html
-ErrorDocument 504 /errors/504.html
-ErrorDocument 505 /errors/505.html
-ErrorDocument 506 /errors/506.html
+# Includes DSO modules
+Include /etc/proftpd/modules.conf
 
-<Directory /etc/fruithost/placeholder/errors>
-	Order allow,deny
-    Allow from all
-</Directory>
+# Set off to disable IPv6 support which is annoying on IPv4 only boxes.
+UseIPv6				on
+# If set on you can experience a longer connection delay in many cases.
+<IfModule mod_ident.c>
+IdentLookups			off
+</IfModule>
 
-<Directory /etc/fruithost/modules/*/hooks>
-	Require all denied
-</Directory>
+ServerName			"FTP"
+ServerType			standalone
+DeferWelcome			off
 
-<Directory /etc/fruithost/modules/*/www>
-	Options +FollowSymLinks -Indexes
-	AllowOverride None
-	Require all granted
-</Directory>
+DefaultServer			on
+ShowSymlinks			on
 
-<Directory /etc/fruithost/placeholder>
-	Options +FollowSymLinks -Indexes
-	AllowOverride All
-	Require all granted
-</Directory>
+TimeoutNoTransfer		600
+TimeoutStalled			600
+TimeoutIdle			1200
 
-<Directory /etc/fruithost/placeholder/errors>
-	Options +FollowSymLinks -Indexes
-	AllowOverride All
-	Require all granted
-</Directory>
+DisplayLogin                    welcome.msg
+DisplayChdir               	.message true
+ListOptions                	"-l"
 
-<VirtualHost *:80>
-	ServerAdmin info@fruithost.de
-	DocumentRoot "/etc/fruithost/placeholder/"
-</VirtualHost>
+DenyFilter			\*.*/
 
-ServerSignature Off
-ServerTokens Prod
-Header set Server: "fruithost"
+# Use this to jail all users in their homes
+DefaultRoot			~
 
-Include /etc/fruithost/config/apache2/panel.conf
-IncludeOptional /etc/fruithost/config/apache2/vhosts/*.conf
+# Users require a valid shell listed in /etc/shells to login.
+# Use this directive to release that constrain.
+# RequireValidShell		off
+
+# Port 21 is the standard FTP port.
+Port				21
+
+# In some cases you have to specify passive ports range to by-pass
+# firewall limitations. Ephemeral ports can be used for that, but
+# feel free to use a more narrow range.
+# PassivePorts                  49152 65534
+
+# If your host was NATted, this option is useful in order to
+# allow passive tranfers to work. You have to use your public
+# address and opening the passive ports used on your firewall as well.
+MasqueradeAddress		1.2.3.4
+
+# This is useful for masquerading address with dynamic IPs:
+# refresh any configured MasqueradeAddress directives every 8 hours
+<IfModule mod_dynmasq.c>
+# DynMasqRefresh 28800
+</IfModule>
+
+# To prevent DoS attacks, set the maximum number of child processes
+# to 30.  If you need to allow more than 30 concurrent connections
+# at once, simply increase this value.  Note that this ONLY works
+# in standalone mode, in inetd mode you should use an inetd server
+# that allows you to limit maximum number of processes per service
+# (such as xinetd)
+MaxInstances			30
+
+# Set the user and group that the server normally runs at.
+User				ftp
+Group				nogroup
+
+# Umask 022 is a good standard umask to prevent new files and dirs
+# (second parm) from being group and world writable.
+Umask				022  022
+# Normally, we want files to be overwriteable.
+AllowOverwrite			on
+
+# Uncomment this if you are using NIS or LDAP via NSS to retrieve passwords:
+# PersistentPasswd		off
+
+# This is required to use both PAM-based authentication and local passwords
+# AuthOrder			mod_auth_pam.c* mod_auth_unix.c
+
+# Be warned: use of this directive impacts CPU average load!
+# Uncomment this if you like to see progress and transfer rate with ftpwho
+# in downloads. That is not needed for uploads rates.
+#
+# UseSendFile			off
+
+TransferLog /var/fruithost/logs/ftp_transfer.log
+SystemLog   /var/fruithost/logs/ftp.log
+
+# Logging onto /var/log/lastlog is enabled but set to off by default
+#UseLastlog on
+
+# In order to keep log file dates consistent after chroot, use timezone info
+# from /etc/localtime.  If this is not set, and proftpd is configured to
+# chroot (e.g. DefaultRoot or <Anonymous>), it will use the non-daylight
+# savings timezone regardless of whether DST is in effect.
+#SetEnv TZ :/etc/localtime
+
+#<IfModule mod_quotatab.c>
+#QuotaEngine off
+#</IfModule>
+
+<IfModule mod_ratio.c>
+Ratios off
+</IfModule>
+
+
+# Delay engine reduces impact of the so-called Timing Attack described in
+# http://www.securityfocus.com/bid/11430/discuss
+# It is on by default.
+<IfModule mod_delay.c>
+DelayEngine on
+</IfModule>
+
+<IfModule mod_ctrls.c>
+ControlsEngine        off
+ControlsMaxClients    2
+ControlsLog           /var/fruithost/logs/ftp_controls.log
+ControlsInterval      5
+ControlsSocket        /var/run/proftpd/proftpd.sock
+</IfModule>
+
+<IfModule mod_ctrls_admin.c>
+AdminControlsEngine off
+</IfModule>
+
+#
+# Alternative authentication frameworks
+#
+#Include /etc/proftpd/ldap.conf
+Include /etc/proftpd/sql.conf
+
+#
+# This is used for FTPS connections
+#
+#Include /etc/proftpd/tls.conf
+
+#
+# Useful to keep VirtualHost/VirtualRoot directives separated
+#
+#Include /etc/proftpd/virtuals.conf
+
+# A basic anonymous configuration, no upload directories.
+
+# <Anonymous ~ftp>
+#   User				ftp
+#   Group				nogroup
+#   # We want clients to be able to login with "anonymous" as well as "ftp"
+#   UserAlias			anonymous ftp
+#   # Cosmetic changes, all files belongs to ftp user
+#   DirFakeUser	on ftp
+#   DirFakeGroup on ftp
+#
+#   RequireValidShell		off
+#
+#   # Limit the maximum number of anonymous logins
+#   MaxClients			10
+#
+#   # We want 'welcome.msg' displayed at login, and '.message' displayed
+#   # in each newly chdired directory.
+#   DisplayLogin			welcome.msg
+#   DisplayChdir		.message
+#
+#   # Limit WRITE everywhere in the anonymous chroot
+#   <Directory *>
+#     <Limit WRITE>
+#       DenyAll
+#     </Limit>
+#   </Directory>
+#
+#   # Uncomment this if you're brave.
+#   # <Directory incoming>
+#   #   # Umask 022 is a good standard umask to prevent new files and dirs
+#   #   # (second parm) from being group and world writable.
+#   #   Umask				022  022
+#   #            <Limit READ WRITE>
+#   #            DenyAll
+#   #            </Limit>
+#   #            <Limit STOR>
+#   #            AllowAll
+#   #            </Limit>
+#   # </Directory>
+#
+# </Anonymous>
+
+# Include other custom configuration files
+Include /etc/proftpd/conf.d/
 
 </script>
 <script src="../build/bundle.js"></script>
