Updating textarea on changes

--- a/default/js/codemirror/src/index.html
+++ b/default/js/codemirror/src/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <div data-language="config" id="code-editor"></div>
+<textarea id="code-area"></textarea>
 <script id="editor-content" type="text/plain">#
 # /etc/proftpd/proftpd.conf -- This is a basic ProFTPD configuration file.
 # To really apply changes, reload proftpd after modifications, if
