--- a/default/js/codemirror/src/index.html
+++ b/default/js/codemirror/src/index.html
@@ -202,6 +202,6 @@ Include /etc/proftpd/sql.conf
 Include /etc/proftpd/conf.d/
 
 </script>
-<script src="../build/bundle.js"></script>
+<script src="../build/bundle.src.js"></script>
 </body>
 </html>
